--- a/Saya.Web.EntityFramework/Saya.Web.EntityFramework.csproj
+++ b/Saya.Web.EntityFramework/Saya.Web.EntityFramework.csproj
@@ -5,6 +5,9 @@
     <RootNamespace>Saya.Web</RootNamespace>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <Version>1.0.0</Version>
+    <RepositoryUrl>https://github.com/nekonyastudio/Saya</RepositoryUrl>
+    <PackageProjectUrl>Nekonya Studio | yomunsam</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
