--- a/EFCore/Saya.Web.EntityFramework/Saya.Web.EntityFramework.csproj
+++ b/EFCore/Saya.Web.EntityFramework/Saya.Web.EntityFramework.csproj
@@ -1,25 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Saya.Web</RootNamespace>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <RepositoryUrl>https://github.com/nekonyastudio/Saya</RepositoryUrl>
-    <PackageProjectUrl>Nekonya Studio | yomunsam</PackageProjectUrl>
+    <PackageProjectUrl></PackageProjectUrl>
+    <Copyright>Nekonya Studio | yomunsam</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Saya.Web\Saya.Web.csproj" />
+    <ProjectReference Include="..\..\Saya.Web\Saya.Web.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\LICENSE">
+    <None Include="..\..\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
