--- a/.github/workflows/publish_nuget_saya_web_efcore_Audit.yml
+++ b/.github/workflows/publish_nuget_saya_web_efcore_Audit.yml
@@ -1,4 +1,4 @@
-name: publish to nuget Saya.Web.EntityFramework.auditing
+name: publish to nuget Saya.Web.EntityFramework.Auditing
 on:
   push:
     branches:
