--- a/EFCore/Saya.Web.EntityFramework.Auditing/Saya.Web.EntityFramework.Auditing.csproj
+++ b/EFCore/Saya.Web.EntityFramework.Auditing/Saya.Web.EntityFramework.Auditing.csproj
@@ -8,6 +8,7 @@
     <Copyright>Nekonya Studio | yomunsam</Copyright>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <RootNamespace>Saya.Web.EntityFramework.Auditing</RootNamespace>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
