--- a/.github/workflows/publish_nuget_saya_efcore.yml
+++ b/.github/workflows/publish_nuget_saya_efcore.yml
@@ -21,7 +21,7 @@ jobs:
         uses: rohith/publish-nuget@v2
         with:
           # Filepath of the project to be packaged, relative to root of repository
-          PROJECT_FILE_PATH: EFCore/Saya.EntityFramework/Saya.EntityFramework.csproj
+          PROJECT_FILE_PATH: src/Saya.EntityFramework/Saya.EntityFramework.csproj
           
           # NuGet package id, used for version detection & defaults to project name
           PACKAGE_NAME: Saya.EntityFramework
