--- a/src/Saya.Core/Saya.Core.csproj
+++ b/src/Saya.Core/Saya.Core.csproj
@@ -4,12 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
     <Copyright>Nekonya Studio | yomunsam</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageProjectUrl></PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/nekonyastudio/Saya</PackageProjectUrl>
     <RepositoryUrl>https://github.com/nekonyastudio/Saya</RepositoryUrl>
     <Authors>yomunsam</Authors>
     <Company>Nekonya Studio</Company>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
+    <Description>😶</Description>
   </PropertyGroup>
 
   <ItemGroup>
