--- a/src/Saya.EntityFramework/Saya.EntityFramework.csproj
+++ b/src/Saya.EntityFramework/Saya.EntityFramework.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <Version>2.0.1</Version>
+    <TargetFramework>net6.0</TargetFramework>
+    <Version>2.0.2</Version>
     <Authors>yomunsam</Authors>
     <Company>Nekonya Studio</Company>
     <Copyright>Nekonya Studio | yomunsam</Copyright>
@@ -11,6 +11,7 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Description>👀</Description>
     <PackageProjectUrl>https://github.com/nekonyastudio/Saya</PackageProjectUrl>
+    <PackageReleaseNotes>升级到 .net 6</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
