--- a/.github/workflows/publish_nuget_saya_efcore.yml
+++ b/.github/workflows/publish_nuget_saya_efcore.yml
@@ -10,10 +10,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # - name: Setup dotnet
-      #   uses: actions/setup-dotnet@v1
-      #   with:
-      #     dotnet-version: 3.1.200
+      # 准备 .NET 环境
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 6.0.x
 
       # Publish
       - name: publish on version change
