升级项目到 .NET 9 并更新版本号
将 Saya.Core.csproj 和 Saya.Domain.csproj 的目标框架从 net7.0 升级到 net9.0。
将版本号从 2.1.0 更新到 9.0.0。
更新发布说明，从“升级到 dotnet 7”改为“Hello dotnet 9”。

--- a/src/Saya.Core/Saya.Core.csproj
+++ b/src/Saya.Core/Saya.Core.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Copyright>Nekonya Studio | yomunsam</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/nekonyastudio/Saya</PackageProjectUrl>
@@ -9,9 +9,9 @@
     <Authors>yomunsam</Authors>
     <Company>Nekonya Studio</Company>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <Version>2.1.0</Version>
+    <Version>9.0.0</Version>
     <Description>😶</Description>
-    <PackageReleaseNotes>升级到 dotnet 7</PackageReleaseNotes>
+    <PackageReleaseNotes>Hello dotnet 9</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
