--- a/src/Saya.Domain/Saya.Domain.csproj
+++ b/src/Saya.Domain/Saya.Domain.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <Version>2.1.0</Version>
+    <TargetFramework>net9.0</TargetFramework>
+    <Version>9.0.0</Version>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Authors>yomunsam</Authors>
     <Company>Nekonya Studio</Company>
@@ -10,7 +10,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <RepositoryUrl>https://github.com/nekonyastudio/Saya</RepositoryUrl>
     <Description>👀</Description>
-	<PackageReleaseNotes>升级到 dotnet7</PackageReleaseNotes>
+	<PackageReleaseNotes>Hello dotnet 9</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
