--- a/src/Saya.EntityFramework.Auditing/Saya.EntityFramework.Auditing.csproj
+++ b/src/Saya.EntityFramework.Auditing/Saya.EntityFramework.Auditing.csproj
@@ -9,6 +9,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <RepositoryUrl>https://github.com/nekonyastudio/Saya</RepositoryUrl>
     <PackageReleaseNotes>Hello dotnet 9</PackageReleaseNotes>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
