--- a/src/Saya.Domain/Saya.Domain.csproj
+++ b/src/Saya.Domain/Saya.Domain.csproj
@@ -11,6 +11,7 @@
     <RepositoryUrl>https://github.com/nekonyastudio/Saya</RepositoryUrl>
     <Description>👀</Description>
 	<PackageReleaseNotes>Hello dotnet 9</PackageReleaseNotes>
+	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
