--- a/src/Saya.EntityFramework/Saya.EntityFramework.csproj
+++ b/src/Saya.EntityFramework/Saya.EntityFramework.csproj
@@ -12,6 +12,7 @@
     <Description>👀</Description>
     <PackageProjectUrl>https://github.com/nekonyastudio/Saya</PackageProjectUrl>
     <PackageReleaseNotes>Hello dotnet 9</PackageReleaseNotes>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
